# dx12-in-rust

./: Cargo.toml
resource/: PixelShader.hlsl
src/: direct3d.rs  main.rs  math.rs  msg.rs  util.rs  window.rs
src/direct3d/: command.rs
