[package]
name = "dx12-in-rust"
version = "0.1.0"
authors = ["akitsu-sanae"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.winapi]
version = "0.3.8"
features = [
    "windef",
    "winuser",
    "winerror",
    "libloaderapi",
    "dxgitype",
    "dxgi1_5",
    "dxgi1_6",
    "d3d12",
    "d3dcommon",
    "unknwnbase"
]

[dependencies]
widestring = "0.4.0"